<resources>
    <string name="app_name">FoodHero</string>

    <!-- Strings related to startscreen -->
    <string name="startscreen_title">Anmelden</string>
    <string name="startscreen_login">Login</string>
    <string name="startscreen_register">Registrieren</string>

    <!-- Strings related to login/Register -->
    <string name="login_title">Login</string>
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_username">Benutzername</string>
    <string name="prompt_password">Passwort</string>
    <string name="prompt_password2">Passwort wiederholen</string>
    <string name="password_forgotten"><u>Passwort vergessen?</u></string>
    <string name="reg_accept_agb">Ich bin mit den AGBs der FoodHeld-App einverstanden</string>
    <string name="reg_end">Registrierung abschliessen</string>
    <string name="reg_thank_you">Vielen Dank für deine Registrierung.</string>
    <string name="reg_back_to_startscreen">Zurück zur Startseite</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="action_sign_in_short">Einloggen</string>
    <string name="error_invalid_uname">Folgende Kriterien müssen erfüllt werden:\n
        - 3 bis 12 Zeichen lang\n
        - Nur Buchstaben, Zahlen und _\n
        - Fängt mit Buchstabe oder _ an
    </string>
    <string name="error_invalid_email">Diese E-Mail ist ungültig</string>
    <string name="error_invalid_password">Folgende Kriterien müssen erfüllt werden:

        - mindestens 8 Zeichen

        - enthält mindestens eine Zahl
    </string>
    <string name="error_incorrect_password">Das Passwort wurde falsch eingegeben</string>
    <string name="error_field_required">Dieses Eingabe wird benötigt</string>
    <string name="permission_rationale">"Kontaktrechte werden benötigt für die E-Mailvervollständigung."
    </string>
    <string name="button_go_on">Weiter</string>
    <string name="imagebutton_help">Hilfe</string>

    <!-- Strings related to startscreen -->
    <string name="action_settings">Settings</string>
    <string name="take_picture">Take picture</string>
    <string name="title_activity_adv7">Adv7Activity</string>
    <string name="title_activity_adv7_select_location">Map</string>
    <string name="tap_instructions">Tap to chose your coordinates</string>
    <string name="hello">Hello FoodHero</string>
    <string name="Bezeichnung">Bezeichnung</string>
    <string name="Category">Kategorie</string>
    <string name="CategoryName">Bezeichnung</string>
    <string name="Abholen">Abholbar bis:</string>
    <string name="Haltbar">Haltbar bis:</string>
    <string name="Description">Bezeichnung:</string>
    <string name="Reserve">Reservieren</string>
    <string name="Popup3">Der Artikel wurde für dich reserviert.</string>
    <string name="Date">Datum</string>
    <string name="search">Suche</string>
    <string name="add">Hinzufügen</string>
    <string name="Place">Ort</string>
    <string name="Location">Standort</string>
    <string name="add_picture">Bild hinzufügen</string>
    <string name="save">Speichern</string>
    <string name="name">Name</string>
    <string name="Time">Uhrzeit</string>
    <string name="Rating">Bewertung</string>
    <string name="reserved">Reserviert</string>
    <string name="shared">Geteilt</string>
    <string name="my_food">Mein Essen</string>
    <string name="button_back">Zurück</string>
    <string name="what">Was?</string>
    <string name="gallery">Galerie</string>
    <string name="title_activity_test">test</string>
</resources>