<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorbackground"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/loadimage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_picture" />

    <TextView
        android:id="@+id/targeturi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/targetimage"
        android:layout_width="fill_parent"
        android:layout_height="439dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveImage"
        android:text="@string/save" />
</LinearLayout>