<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="16dp"
    tools:context="com.example.chewbacca.food4all.RegisterActivity"
    android:background="@color/colorbackground">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            app:srcCompat="@android:color/holo_green_dark"
            android:id="@+id/imageButton4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription"/>

        <ImageButton
            app:srcCompat="@android:color/holo_green_dark"
            android:id="@+id/imageButton8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription"/>

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@android:color/darker_gray"
            android:id="@+id/imageButton10"
            android:layout_weight="1"
            tools:ignore="ContentDescription"/>
    </LinearLayout>

    
    
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_dialog_info"
        android:layout_marginBottom="52dp"
        android:id="@+id/ibInfo2"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/imagebutton_help"/>
    
    <ScrollView
        android:id="@+id/register_form2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/password_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <EditText
                android:id="@+id/etPasswort1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/etPasswort2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password2"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginTop="20dp" />

            <Button
                android:text="@string/button_go_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bWeiter2"
                android:onClick="goToRegister3"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
