<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Bezeichnung"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cast_expanded_controller_ad_layout_width">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="180dp"
                android:layout_height="@dimen/cast_intro_overlay_title_margin_top"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitStart"
                app:srcCompat="@android:drawable/ic_notification_overlay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="@android:dimen/thumbnail_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Category"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/mr_controller_volume_group_list_item_icon_size" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cast_libraries_material_featurehighlight_text_body_size" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/CategoryName"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/cast_libraries_material_featurehighlight_inner_margin" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/prompt_username"
                android:textColor="@android:color/white"
                android:textSize="@dimen/mr_controller_volume_group_list_item_icon_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/Abholen"
                android:textColor="@android:color/white"
                android:textSize="@dimen/cast_libraries_material_featurehighlight_inner_margin" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/Haltbar"
                android:textColor="@android:color/white"
                android:textSize="@dimen/cast_libraries_material_featurehighlight_inner_margin" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cast_libraries_material_featurehighlight_text_body_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/Description"
                android:textColor="@android:color/white"
                android:textSize="@dimen/cast_libraries_material_featurehighlight_inner_margin" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cast_libraries_material_featurehighlight_text_body_size" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reserve" />

</LinearLayout>