<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chewbacca.food4all.Startscreen"
    android:weightSum="1"
    android:background="#46abd7"
    android:fontFamily="sans-serif">

    <!-- Startup screen -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:layout_weight="0.80"
            android:text="@string/startscreen_title"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <ImageButton
        android:layout_width="278dp"
        android:layout_height="93dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageButton4"
        android:onClick="goToLogin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/startscreen_login"
        android:gravity="center"
        android:textSize="18sp" />

    <ImageButton
        android:layout_width="286dp"
        android:layout_height="97dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageButton5"
        android:onClick="goToRegister" />

    <TextView
        android:text="@string/startscreen_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:gravity="center"
        android:textSize="18sp" />

</LinearLayout>